--- a/style.css
+++ b/style.css
@@ -10,9 +10,16 @@ h1{
 h3{
     font-size: 30px;
 }
+h4{
+    font-size: 20px;
+}
+
+.paramount{
+    font-size: 25px;
+}
 
 .flexible-container{
-    margin-bottom: 100px;
+    /*margin-bottom: 100px;*/
     display: flex;
 }
 
@@ -49,6 +56,15 @@ h3{
     background-image: url(images/top-banner.png);
     padding: 0;
     background-repeat: no-repeat;
+}
+
+.Career{
+    margin-left: 80px;
+    margin-right: 50px;
+    text-align: justify;
+}
+.hire{
+    margin-left: 80px;
 }
 
 .my-dream{
